Adjust HUD, fixed alignment for Tag status cards, fixed not being able to scroll chat in Tag

--- a/code/UI/Base/Waiting/WaitingForPlayers.scss
+++ b/code/UI/Base/Waiting/WaitingForPlayers.scss
@@ -13,7 +13,7 @@ WaitingForPlayers {
 
 
     &.visible {
-        top: 300px;
+        top: 250px;
         opacity: 1;
     }
 
